2カラム: ネガティブマージンを使う手法を追加

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
         <li>
             レイアウト
             <ul>
-                <li><a href="layout/01_2column/index.html" target="_blank">2カラムレイアウト</a></li>
+                <li>2カラムレイアウト
+                    <ul>
+                        <li><a href="layout/01_2column/index.html" target="_blank">flexbox</a></li>
+                        <li><a href="layout/01_2column/negative.html" target="_blank">ネガティブマージン</a></li>
+                        <li><a href="layout/01_2column/table.html" target="_blank">display:table</a></li>
+                        <li><a href="layout/01_2column/calc.html" target="_blank">calc</a></li>
+                    </ul>
+                </li>
                 <li>固定フッター</li>
                 <li>ログイン画面風</li>
                 <li>登録フォーム</li>
