ヘッダーメニューの追加

--- a/index.html
+++ b/index.html
@@ -20,10 +20,17 @@
                         <li><a href="layout/01_2column/calc.html" target="_blank">calc</a></li>
                     </ul>
                 </li>
-                <li>固定フッター</li>
+                <li>
+                    ヘッダー
+                    <ul>
+                        <li><a href="layout/02_headers/index.html">通常ヘッダー</a></li>
+                        <li><a href="">固定ヘッダー</a></li>
+                    </ul>
+                </li>
                 <li>ログイン画面風</li>
                 <li>登録フォーム</li>
                 <li>検索画面</li>
+                <li>固定フッター</li>
             </ul>
         </li>
         <li>コンポーネント
