CSS Gridの2カラムレイアウトを追加、登録フォームのレイアウト追加

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                     <ul>
                         <li><a href="layout/01_2column/index.html" target="_blank">flexbox</a></li>
                         <li><a href="layout/01_2column/negative.html" target="_blank">ネガティブマージン</a></li>
+                        <li><a href="layout/01_2column/grid.html" target="_blank">CSS Grid</a></li>
                         <li><a href="layout/01_2column/table.html" target="_blank">display:table</a></li>
                         <li><a href="layout/01_2column/calc.html" target="_blank">calc</a></li>
                     </ul>
@@ -33,7 +34,12 @@
                         <li><a href="layout/03_login/index.html">ログイン画面1</a></li>
                     </ul>
                 </li>
-                <li>登録フォーム</li>
+                <li>
+                    登録フォーム
+                    <ul>
+                        <li><a href="layout/04_form/index.html">フォーム画面1</a></li>
+                    </ul>
+                </li>
                 <li>検索画面</li>
                 <li>固定フッター</li>
             </ul>
@@ -41,6 +47,7 @@
         <li>コンポーネント
             <ul>
                 <li>サイドメニュー(ハンバーガーメニュー)</li>
+                <li>チェックボックス</li>
                 <li>ドロップダウンメニュー</li>
                 <li>タブ</li>
                 <li>モーダル</li>
