チェックボックスを追加

--- a/index.html
+++ b/index.html
@@ -51,7 +51,11 @@
         <li>コンポーネント
             <ul>
                 <li>サイドメニュー(ハンバーガーメニュー)</li>
-                <li>チェックボックス</li>
+                <li>チェックボックス
+                    <ul>
+                        <li><a href="components/01_check/index.html">チェックボックス1</a></li>
+                    </ul>
+                </li>
                 <li>ドロップダウンメニュー</li>
                 <li>タブ</li>
                 <li>モーダル</li>
