セレクトボックスを追加

--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
                         <li><a href="components/01_check/index.html">チェックボックス1</a></li>
                     </ul>
                 </li>
+                <li>セレクトボックス
+                    <ul>
+                        <li><a href="components/02_select/index.html">セレクトボックス1</a></li>
+                    </ul>
+                </li>
                 <li>ドロップダウンメニュー</li>
                 <li>タブ</li>
                 <li>モーダル</li>
